# estimator_node

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
launch/: ekf_launcher.launch  estimation_ekf.launch
src/: estimator_node.cpp  kalman_estimator.cpp  robot_estimator_3d.cpp  robot_estimator_kinect_3d.cpp  robot_pose_ekf_estimator.cpp
